--- a/myproject/templates/register.html
+++ b/myproject/templates/register.html
@@ -77,7 +77,7 @@
 						</button>
 					</div>
 
-				
+				{{form.errors}}
 					
 					<div class="text-center w-full p-t-115">
 						<span class="txt1">
