--- a/myproject/templates/front.html
+++ b/myproject/templates/front.html
@@ -1,9 +1,8 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login</title>
+	<title>Home</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -24,24 +23,35 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 <!--===============================================================================================-->
+
+
 </head>
 <body>
     <div class="limiter">
 		<div class="container-login100">
-			<div class="wrap-login100 p-l-50 p-r-50 p-t-77 p-b-30">
-            <h1>Home</h1>
-            <span>Hello,{{request.user}}</span>
-            
+			<div class="wrap-login100 p-l-60 p-r-60 p-t-60 p-b-60">
+				<p style="font-size:65px;float:left;width:32%; ">&#128211;</p>
+			<h1>Book Repository</h1>
+			<br>
+			<h6>An online portal wherein you can access and download pdf of e-books for free. 
+				You can also upload pdf of e-books which can be accessed by other users.
+			</h6>
+			<div class="container-login100-form-btn p-t-25" style="float:left;width:46%;">
+				<a class="login100-form-btn" href="{% url 'loginpage' %}" >
+					Login
+					</a>
+			</div>
 			<div class="container-login100-form-btn p-t-25" style="float:right;width:46%;">
-				<a class="login100-form-btn" href="{% url 'logoutpage' %}" >
-					Logout
+				<a class="login100-form-btn" href="{% url 'register' %}" >
+					Register
 					</a>
 			</div>
 			<style>a:hover {
 				text-decoration: none;
 			  color: #fff;
 			}</style>
-        </div>
+			
+			
     </div>
 </div>
 
