--- a/myproject/templates/front.html
+++ b/myproject/templates/front.html
@@ -30,11 +30,11 @@
     <div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-60 p-r-60 p-t-60 p-b-60">
-				<p style="font-size:65px;float:left;width:32%; ">&#128211;</p>
-			<h1>Book Repository</h1>
+				<p style="font-size:65px;float:left;width:32%; ">&#128269;</p>
+			<h1>Question Repository</h1>
 			<br>
-			<h6>An online portal wherein you can access and download pdf of e-books for free. 
-				You can also upload pdf of e-books which can be accessed by other users.
+			<h6>An online portal wherein you can ask or answer questions pertaining to a particular topic. 
+
 			</h6>
 			<div class="container-login100-form-btn p-t-25" style="float:left;width:46%;">
 				<a class="login100-form-btn" href="{% url 'loginpage' %}" >
