--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -28,9 +28,8 @@
 <body>
     <div class="limiter">
 		<div class="container-login100">
-			<div class="wrap-login100 p-l-50 p-r-50 p-t-77 p-b-30">
-            <h1>Home</h1>
-            <span>Hello,{{request.user}}</span>
+			<div class="wrap-login100 p-l-30 p-r-50 p-t-30 p-b-100">
+            <h1>Hello,{{request.user}}!&#128515<h1>
             
 			<div class="container-login100-form-btn p-t-25" style="float:right;width:46%;">
 				<a class="login100-form-btn" href="{% url 'logoutpage' %}" >
