--- a/myproject/templates/askquestion.html
+++ b/myproject/templates/askquestion.html
@@ -1,9 +1,8 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Home</title>
+	<title>Ask Question</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -31,34 +30,28 @@
 		<div class="container-login100">
 			
 			<div class="wrap-login100 p-l-15 p-r-50 p-t-15 p-b-100" style="width:1295px; height:590px;">
-            <h2>Hello, {{request.user}}!&#128515<h2>
-				<div class="container-login100-form-btn p-l-40 p-r-30 p-t-0 p-b-10" style="float:right;width:14%;height:10px">
-					<a class="login100-form-btn" href="{% url 'logoutpage' %}"style="background-color:#C0C0C0;" >
-						Logout
+            <h2>Ask a Question<h2>
+				
+                <div class="container-login100-form-btn p-l-40 p-r-30 p-t-0 p-b-10" style="float:right;width:14%;">
+					<a class="login100-form-btn" href="{% url 'home' %}"style="background-color:#C0C0C0;" >
+						Back
 						</a>
 				</div>
-				<div class="container-login100-form-btn p-l-40 p-r-30 p-t-0 p-b-10" style="float:right;width:14%;">
-					<a class="login100-form-btn" href="{% url 'askquestion' %}"style="background-color:#C0C0C0;" >
-						Ask a Question
-						</a>
-				</div>
-				<br>
-				<H4 style="color: black;">Trending Questions:</H4> 
-
-				<br>
-				{% for q in que %}
-				<div>
-					<h5>&#10097; <a style="font-size:20px; color:black;" href="{% url 'answers' pk=q.pk %}">{{ q.text }}<!--<span class="badge badge-success float-right">{{ q.upvotes }} Upvote{{ q.upvotes | pluralize }}</span>--></a></h5>
-					<h6>
-						<font size="2" color="grey">Asked: {{ q.date_asked }}</font>
-					</h6>
-					<br>
-				</div>
-				{% endfor %}
-			<style>a:hover {
-				text-decoration: none;
-			  color: #fff;
-			}</style>
+                <br>
+                <form method="POST" class="question-form">
+                    {% csrf_token %}
+                        {{ form.as_p }}
+                        
+                    
+                    <div class="container-login100-form-btn p-t-25 p-l-45 p-r-45" style="color:black;width:17%;">
+						<button class="login100-form-btn" type="submit" action="{% url 'home' %}">
+							Submit
+						</button>
+                    </div>
+                </form>
+				
+				
+			
         </div>
     </div>
 </div>
