--- a/myproject/static/css/main.css
+++ b/myproject/static/css/main.css
@@ -194,6 +194,8 @@ iframe {
   z-index: 1;
 }
 
+
+
 .container-login100::before {
   content: "";
   display: block;
@@ -398,6 +400,22 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.menu-icon {
+  line-height: 60px;
+  width: 100%;
+  background: #000;
+  text-align: right;
+  box-sizing: border-box;
+  padding: 15px 24px;
+  cursor: pointer;
+  color: #fff;
+  display: none;
+}
+
+
+
+
 
 .login100-form-btn {
   font-family: Raleway-Bold;
