--- a/myproject/templates/front.html
+++ b/myproject/templates/front.html
@@ -30,10 +30,12 @@
     <div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-60 p-r-60 p-t-60 p-b-60">
-				<p style="font-size:65px;float:left;width:32%; ">&#128269;</p>
-			<h1>Question Repository</h1>
+				<p style="font-size:65px;float:left;width:32%; ">&#127914;</p>
+			<h1>Meet And Greet
+			</h1>
 			<br>
-			<h6>An online portal wherein you can ask or answer questions pertaining to a particular topic. 
+			<h6>A portal wherein you get notified about upcoming events and meetups. 
+				You can also add your own events and meetups for others to attend.
 
 			</h6>
 			<div class="container-login100-form-btn p-t-25" style="float:left;width:46%;">
