--- a/myproject/templates/addevent.html
+++ b/myproject/templates/addevent.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,7 +36,9 @@
                 <form method="POST" class="question-form">
                     <br>
 					{% csrf_token %}
-						{{ form.as_p }}
+					<div style="margin-left: 1.5em;">
+						{{ form|crispy }}
+					</div>
                     <div class="container-login100-form-btn p-t-25 p-l-56 p-r-56" style="color:black;width:17%;float:center">
 						<button class="login100-form-btn" type="submit" action="{% url 'home' %}">
 							Submit
