--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -10,6 +10,7 @@
 <style>
 	.xyz{ 
 	   width: 80%;
+	   height:120px;
 	   border: 1px solid black;
 	   border-radius: 10px;
 	   padding: 10px;
@@ -21,6 +22,7 @@
 		overflow: hidden;
 	  }
 	</style>
+	
 </head>
 <body>
 		<div class="topnav">
@@ -50,7 +52,15 @@
 				
 				{% for q in ques %}
 				<div class="xyz">
-					<h5>&#10097;{{ q.text }}</a></h5>
+					<h5>&#10097; {{ q.text }}</a></h5>
+					
+					<div class="container-login100-form-btn p-l-40 p-r-30 p-t-0 p-b-10" style="float:right;width:17%;">
+						
+						<a class="login100-form-btn" href="#"style="background-color:#C0C0C0;">
+							Attend
+							</a>
+					</div>
+					
 					<h6>
 						<font size="2" color="grey">Added: {{ q.date_asked }}</font>
 					</h6>
