--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -56,7 +56,7 @@
 					
 					<div class="container-login100-form-btn p-l-40 p-r-30 p-t-0 p-b-10" style="float:right;width:17%;">
 						
-						<a class="login100-form-btn" href="#"style="background-color:#C0C0C0;">
+						<a class="login100-form-btn" href="{% url 'attendevent' pk=q.pk %}"style="background-color:#C0C0C0;">
 							Attend
 							</a>
 					</div>
